assets/styles/index.scss
$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
@import '~bootstrap-sass/assets/stylesheets/bootstrap';
@import '~highlight.js/styles/_default.scss';

// color for input background in chrome (replace default yellow)
$input-background-color: #fff;
$input-shadow-color: rgba(102, 175, 233, .6);

// autocomplete styles in chrome
input:focus,
input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover,
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
  background-color: $input-background-color;
  -webkit-box-shadow: 0 0 0 1000px $input-background-color inset,
                      0 0 8px $input-shadow-color;
}

/// dropdown login form CSS
.dropdown-menu {
  min-width: 320px;
  padding: 15px 15px 0;
}

// tab ui for public authentication forms
.tab-content .panel{
  border-top: 0;
}

// input groups in forms
.input-group {
  width: 100%;
}

// validation feedback on form fields
.help-block {
  display: none;
}

// textarea used for snippet input
textarea {
  font-family: monospace;
  overflow: auto
  // resize: vertical;
}

// div used for snippet display
.item-body {
  font-family: monospace;
  white-space: pre-wrap;
  // word-break: normal;
}

*, *:before, *:after {box-sizing:  border-box !important;}

.item-grid {
  // -moz-column-width: 600px;
  -webkit-column-width: 600px;
  //  -moz-column-gap: .5em;
  //  -webkit-column-gap: 0;
}

.grid-item {
  display: inline-block;
}

button span {
  margin-right: 6px;
}

